refactoring: create utility class